# Quality-Filter-PDI

./: 2.0.0  3.1.0  5.0.0  COMENTARIOS_REMOVIDOS.md  COMO_USAR.md  DOCUMENTACAO.md  IMPLEMENTACAO_IA.md  INSTRUCOES.md  LIMPEZA_CONCLUIDA.md  MELHORIAS.md  README.md  REORGANIZACAO_COMPLETA.md  REVISAO_COMPLETA.md  STATUS_CONFIGURACAO.md  analise_automatica_20250812_095918.csv  analise_robusta_20250812_094933.csv  cleanup_project.py  demo_csv_direto.py  demo_final.py  demo_simples.py  exemplo.py  main.py  main_v2.py  pyproject.toml  remove_comments.py  reorganize_project.py  requirements.txt  requirements_ai.txt  requirements_clean.txt  resumo_analise_20250812_095455.json  resumo_analise_20250812_095528.json  resumo_automatico_20250812_095918.json  setup.py  setup_environment.ps1  test_final_clean.py  test_simple.py  test_system.py  teste.py  validate_structure.py  validate_system.py
app/: __init__.py  pdi_analyzer.py
app/core/: __init__.py  config.py
app/services/: file_service.py  pdi_analysis_service.py  quality_metrics_service.py
app/utils/: text_utils.py
cli/: main.py
config/: __init__.py  settings.py
data/input/: exemplo_pdi.xlsx  ~$exemplo_pdi.xlsx
data/samples/: exemplo_pdis.csv
documentation/: COMO_USAR.md  CONFIGURACAO_AMBIENTE.md  EXPLICACAO_NOTAS.md  GUIA_COMPLETO.md
examples/: EXEMPLO_EXPLICACAO_PRATICA.md  demo.py  demo_explicacao_notas.py  exemplo_pdi.csv  exemplo_saida_com_explicacao.csv  projeto_concluido.py  relatorio_final.py  simple_test.py  test_score_explanation.py
output/: test_score_explanation.csv  test_score_explanation.json
quality_filter_pdi/: __init__.py  pdi_analyzer.py
quality_filter_pdi/ai/: advanced_ai_analyzer.py  ai_text_analyzer.py  cloud_ai_analyzer.py
quality_filter_pdi/core/: config.py
quality_filter_pdi/services/: file_service.py  pdi_analysis_service.py  quality_metrics_service.py  skill_classifier.py
quality_filter_pdi/utils/: text_utils.py
scripts/: cleanup.py
setup/: setup_environment.bat
src/: __init__.py  pdi_analyzer.py  pdi_analyzer_new.py  quality_metrics.py  text_processor.py
tests/: test_pdi_analyzer.py
tests/integration/: final_validation.py  test_complete.py  test_system.py
tests/unit/: test_skill_classification.py
